tests/baselines/reference/privateNameFieldInitializer(strict=true).errors.txt
privateNameFieldInitializer.ts(3,5): error TS7008: Member '#uninitialized' implicitly has an 'any' type.


==== privateNameFieldInitializer.ts (1 errors) ====
    class A {
        #field = 10;
        #uninitialized;
        ~~~~~~~~~~~~~~
!!! error TS7008: Member '#uninitialized' implicitly has an 'any' type.
    }
    